--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework=INFO
-logging.level.com.mkyong=INFO
+logging.level.com.moviex=INFO
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
 
@@ -23,3 +23,11 @@ spring.datasource.hikari.poolName=HikariPoolZZZ
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+# ===============================
+# TOMCAT
+# ===============================
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
