--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ logging.level.root=ERROR
 # ===============================
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://103.7.10.16:1533;databaseName=phimdayr_db
-spring.datasource.username=phimdayr_db
-spring.datasource.password=AecaykheStreamingVideo2345@!12345
+spring.datasource.url=jdbc:sqlserver://chotamhiep.vn;databaseName=moviex
+spring.datasource.username=moviex
+spring.datasource.password=123qwe@M
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -31,8 +31,3 @@ spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
-
-# ===============================
-# JWT
-# ===============================
-jwt.secret=javainuse
