--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ logging.level.org.springframework=INFO
 logging.level.com.moviex=INFO
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
+logging.file=moviex-logger.log
 
 # ===============================
 # DATABASE
@@ -27,7 +28,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 # ===============================
 # TOMCAT
 # ===============================
-spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=20
-spring.datasource.tomcat.min-idle=15
+server.port=9091
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.file-date-format=yyyy-MM-dd
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.suffix=.log
+
+server.tomcat.max-threads=200
+server.connection-timeout=5s
+server.max-http-header-size=8KB
+server.tomcat.max-swallow-size=2MB
+server.tomcat.max-http-post-size=2MB
+#server.ssl.enabled=true
+#server.ssl.protocol=TLS
+#server.ssl.key-store-password=my_password
+#server.ssl.key-store-type=keystore_type
+#server.ssl.key-store=keystore-path
+#server.ssl.key-alias=tomcat
