--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ logging.level.com.moviex=INFO
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
 logging.file=moviex-logger.log
-
+logging.file.max-size=10MB
+logging.file.max-history=5
 # ===============================
 # DATABASE
 # ===============================
