--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ logging.level.com.moviex=INFO
 logging.level.com.zaxxer=DEBUG
 logging.level.root=ERROR
 logging.file=moviex-logger.log
+logging.file.max-history=20
 logging.file.max-size=10MB
-logging.file.max-history=5
+#logging.level.org.apache.tomcat=DEBUG
+#logging.level.org.apache.catalina=DEBUG
 # ===============================
 # DATABASE
 # ===============================
@@ -30,9 +32,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 # TOMCAT
 # ===============================
 server.port=9091
+server.tomcat.basedir=tomcat
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.directory=logs
-server.tomcat.accesslog.file-date-format=yyyy-MM-dd
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 server.tomcat.accesslog.prefix=access_log
 server.tomcat.accesslog.suffix=.log
 
