--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,8 @@ server.tomcat.max-http-post-size=2MB
 #server.ssl.key-store-type=keystore_type
 #server.ssl.key-store=keystore-path
 #server.ssl.key-alias=tomcat
+
+# ===============================
+# TOKEN
+# ===============================
+app.moviex.token=test
