--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework=INFO
 logging.level.com.moviex=INFO
-logging.level.com.zaxxer=DEBUG
+logging.level.com.zaxxer=ERROR
 logging.level.root=ERROR
 logging.file=moviex-logger.log
 logging.file.max-history=20
@@ -55,3 +55,5 @@ server.tomcat.max-http-post-size=2MB
 # TOKEN
 # ===============================
 app.moviex.token=test
+app.moviex.user=khanhlv5
+app.moviex.pass=123qwe@
